--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,42 +1,19 @@
 <!doctype html>
 <html lang="en">
 <h1> Welcome player </h1>
-Your quote for <%= @asset[0..5] %> is: bid:<span id="bid"><%= @bid %></span>ask:<span id="ask"><%= @ask %></span>Last trade at:<%= @last_trade_price %>
+Your quote for <%= @asset[0..5] %> is: bid:<span id="bid"><%= @bid %> </span>ask:<span id="ask"><%= @ask %></span><br> Last trade at:<%= @last_trade_price %><br>
 
 <div id="images"></div>
 
 <% if flash[:notice] && !flash[:notice].empty? %>
-
 <%= flash[:notice] %>
-
 <% end %>
 
 
-<form method="post" action="/">
-  <button type="button" id="buy" value="buy">Buy</button>
-  <button type="button" id="sell" value="sell">Sell</button>
-
-</form>
-
-
-<script type="text/javascript">
-
-function getData() {
-    var url = 'http://query.yahooapis.com/v1/public/yql';
-    var symbol = $("APPL").val();
-    var data = encodeURIComponent("select * from yahoo.finance.quotes where symbol in ('" + symbol + "')");
-
-    $.getJSON(url, 'q=' + data + "&format=json&diagnostics=true&env=http://datatables.org/alltables.env")
-        .done(function (data) {
-            $('#result').text("Price: " + data.query.results.quote.LastTradePriceOnly);
-        })
-        .fail(function (jqxhr, textStatus, error) {
-            var err = textStatus + ", " + error;
-            console.log('Request failed: ' + err);
-        });
-}
-
-</script>
+<form action="/" method="post">
+  <button name="buy" type="submit" id="buy" value="buy">Buy</button>
+  <button name="sell" type="submit" id="sell" value="sell">Sell</button>
+</form>  
 
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 
