adding more info in window

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,7 +11,7 @@ Your quote for <%= @asset[0..5] %> is: bid:<span id="bid"><%= @bid %></span>ask:
 
 
 <form action="/" method="post">
-  <button name="buy" type="submit" id="buy" value="<%= @askexit %> ">Buy</button>
+  <button name="buy" type="submit" id="buy" value="<%= @ask %> ">Buy</button>
   <button name="sell" type="submit" id="sell" value="<%= @bid %>">Sell</button>
 </form>
 
