--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -23,8 +23,8 @@ Your quote for <%= @asset[0..5] %> is: bid:<span id="bid"><%= @bid %></span>ask:
 
 <h1>Please sign in</h1>
 
-<form action="/signin" method="post">
-  Email: <input name="email_or_username" type="text" >
+<form action="/login" method="post">
+  Email: <input name="email" type="text" >
   Password: <input name="password" type="password">
   <input type="submit" value="Sign in">
 </form>
