--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -14,8 +14,8 @@ Your quote for <%= @asset[0..5] %> is: bid:<span id="bid"><%= @bid %></span>ask:
   <button name="buy" type="submit" id="buy" value="<%= @ask %> ">Buy</button>
 </form>
 
-<form action="/sign_in" method="post">
-  <button name="sign_in" type="submit" id="sign_in" value="sign_in">Log In</button>
+<form action="/sign_out" method="post">
+  <!--<button name="sign_in" type="submit" id="sign_in" value="sign_in">Log In</button>-->
   <button name="sign_out" type="submit" id="sign_out" value="sign_out">Sign Out</button>
 </form>
 
