Added ajax logic

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <h1> Welcome player </h1>
-Your quote for <%= @asset[0..5] %> is: bid:<span id="bid"><%= @bid %></span>ask:<span id="ask"><%= @ask %></span><br> Last trade at:<%= @last_trade_price %><br>
+Your quote for <%= @asset[0..5] %> is: bid:<span id="bid"><p id="bid"></p><%= @bid %></span>ask:<span id="ask"><%= @ask %></span><br> Last trade at:<%= @last_trade_price %><br>
 
 <div id="images"></div>
 
